--- a/config.toml
+++ b/config.toml
@@ -107,7 +107,7 @@ bitbucket = "" # Your Bitbucket profile ID
 linkedin = "" # Your LinkedIn profile ID (from public URL)
 googleplus = "Myprofile" # Your Google+ profile ID
 facebook = "Myprofile" # Your Facebook profile ID
-twitter = "Myprofile" # Your Twitter profile ID
+twitter = "RudiMartinsen" # Your Twitter profile ID
 youtube = ""  # Your Youtube channel ID
 flattr = ""  # populate with your flattr uid
 
