--- a/config.toml
+++ b/config.toml
@@ -40,8 +40,8 @@ tag = "tags"
 topic = "topics"
 
 [author]
-name = "yourname"
-email = "yourname@example.com"
+name = "RudiMartinsen"
+email = ""
 
 #
 # All parameters below here are optional and can be mixed and matched.
@@ -76,8 +76,8 @@ bootswatchtheme = "paper"
 # menu for changing language. This changes languages with js and stores the choice with the help of JavaScript in a Cookie. Then the path is rewritten with pathnamereplace.js. The name of the md files needs to have the same name for each language abbreviation to work correctly. Example: showcase.en.md and showcase.sv.md. It only works if DefaultContentLanguageInSubdir = true
 switchlang = false
 # You can use markdown here.
-BrandImage = "http://blog.appernetic.io/images/apperneticlogo.png" #top header brand image.
-brand = "My awsome blog" # brand image alt text.
+BrandImage = "" #top header brand image.
+brand = "" # brand image alt text.
 topline = "few words about your site"
 footline = "code with <i class='fa fa-heart'></i>"
 
@@ -102,11 +102,11 @@ highlight = "default"
 googleAnalytics = ""
 
 # Sidebar social links.
-github = "Myprofile" # Your Github profile ID
+github = "" # Your Github profile ID
 bitbucket = "" # Your Bitbucket profile ID
 linkedin = "" # Your LinkedIn profile ID (from public URL)
-googleplus = "Myprofile" # Your Google+ profile ID
-facebook = "Myprofile" # Your Facebook profile ID
+googleplus = "" # Your Google+ profile ID
+facebook = "" # Your Facebook profile ID
 twitter = "RudiMartinsen" # Your Twitter profile ID
 youtube = ""  # Your Youtube channel ID
 flattr = ""  # populate with your flattr uid
@@ -141,27 +141,21 @@ extensionmask = []
 languageCode = "en"
 weight = 1
 copyright = "(c) 2016 Copyright my blog"
-title = "My blog" # Site title
+title = "Testing hugo" # Site title
 
 [[Languages.en.menu.main]]
 name = "Blog"
 pre = ""
 weight = 2
-identifier = "post"
-url = "/post/"
+identifier = "posts"
+url = "/posts/"
 
 [[Languages.en.menu.main]]
 name = "About"
 weight = 1
 identifier = ""
-url = "https://appernetic.io/app/#/about"
+url = ""
 pre = "<i class='fa fa-road'></i>"
-
-[[Languages.en.menu.main]]
-name = "Dashboard"
-identifier = ""
-weight = 3
-url = "https://appernetic.io/app/"
 
 [[Languages.en.menu.footer]] # add  links to the bottom right corner.
 name = "Disclaimer"
@@ -169,12 +163,6 @@ pre = "<i>&middot;</i>"
 identifier = "disclaimer"
 weight = 1
 url = "/disclaimer/"
-
-[[Languages.en.menu.footer]]
-name = "Terms"
-identifier = "terms"
-weight = 2
-url = "/terms/"
 
 [Languages.sv]
 languageCode = "sv"
